Update and fixing models Quata exceed

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,9 @@ requests
 google-generativeai
 python-dotenv
 huggingface_hub
-fastapi
-uvicorn
-python-multipart
 beautifulsoup4
 sentence-transformers
 faiss-cpu
 numpy
+lxml
+playwright
