--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,9 @@ env/
 
 # Your specific files to ignore
 test.py
-rags
+rags/
 DARK RAS IT Logo 2.png
+orders.json
+
+# Streamlit secrets (keep secrets.toml as template only)
+.streamlit/secrets.toml
